Actualizaciones al sitio

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "reactstrap": "8.9.0",
     "rellax": "1.12.1",
     "sass": "1.54.0",
+    "styled-components": "^6.1.18",
     "swiper": "^11.2.4"
   },
   "scripts": {
